rest/rest-server.yaml
apiVersion: v1
kind: Pod
metadata:
  #
  # This is the name that will appear in kubectl get po
  #
  name: rest-server
  labels:
    app: rest-server
spec:
  #
  # The specification is a list of attributes, one of which
  # is the list of containers
  # 
  containers:
  - name: flask-rest-server
    image: bhuv005/flask-rest-server:v1
    ports:
      - containerPort: 9999
