rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server  # <-- Add the name field here
  namespace: default
spec:
  selector:
    app: rest-server  # <-- Make sure this selector matches the labels on your pods
  ports:
  - name: blog
    port: 8888      # Exposed port
    targetPort: 9999 # Port on the pod/container
